k8s/apps/forge-demo-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: forge-demo
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
